--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
+.text-shadow-white {
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.514);
+}
